--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/dss-interfaces.git"]
 	path = lib/dss-interfaces.git
 	url = https://github.com/makerdao/dss-interfaces.git
+[submodule "lib/dss-gate"]
+	path = lib/dss-gate
+	url = https://github.com/deco-protocol/dss-gate
